fixed shifty-components-bug

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,7 +24,7 @@
 }
 
 html {
-  font-size: 5vw;
+  font-size: 2.5vh;
   background-color: var(--main-blue);
   font-family: 'Roboto', sans-serif;
   color: var(--main-dark);
